===========================================================================
 This file describes changes in the IO package beginning from version 1.2:
===========================================================================

==========================
 Changes from 3.1 -> 3.2:
==========================

  - Remove the global function f which was accidentally put in there
    in 3.1.


==========================
 Changes from 3.0 -> 3.1:
==========================

  - Fix documentation of /dev/random and /dev/urandom
  - Background jobs
  - Parallel patterns: ParMapReduce, ParTakeFirstResult, ParDo


==========================
 Changes from 2.3 -> 3.0:
==========================

  - Added ignoring of SIGPIPE for architectures where standard
    behaviour is to terminate the process.
  - Completely new configure process with our own autoconf scripts
  - IO_gettimeofday new
  - IO_gmtime and IO_localtime new
  - Check for IO_getpid and IO_getppid and IO_kill
  - Load dynamic module earlier (in init.g at the beginning)
  - Release revision 342 as 3.0: 8.4.2009


==========================
 Changes from 2.2 -> 2.3:
==========================

  - Require GAP >= 4.4.9 in PackageInfo.g
  - Change addresses to St Andrews.
  - Add understanding of chunked transfer encoding.
  - Make IO compile on FreeBSD.
  - Added IO_getpid, IO_getppid, IO_kill.
  - Change license to GPL V2 or later.
  - Released revision 328 as 2.3: 3.10.2007


==========================
 Changes from 2.1 -> 2.2:
==========================

  - Fixed a serious bug with the generic object pickler.
  - Released version 296 as 2.2: 2.4.2007


==========================
 Changes from 2.0 -> 2.1:
==========================

  - Fixed bug with IO_stat, that time stamps are usually >= 2^28.
  - Add framework for other packages to install picklers and unpicklers
    even if they are loaded before the IO package.
  - Pickling/Unpickling of functions and operations (methods still a problem)