@@ -178,8 +178,10 @@ The following functions from the C library are made available as
 <C>fork</C>,
 <C>fstat</C>, 
 <C>gethostbyname</C>, 
+<C>gethostname</C>,
 <C>getpid</C>,
 <C>getppid</C>,
+<C>getsockname</C>,
 <C>getsockopt</C>, 
 <C>gettimeofday</C>,
 <C>gmtime</C>,
